Fixed layout on Products.cshtml. Input fields now aligned.

--- a/Styles/Products.css
+++ b/Styles/Products.css
@@ -48,6 +48,27 @@ h2{ font-size:1.4em; }
     text-align: center;
 }
 
+label.field {
+    text-align: left;
+    width:  150px;
+    float: left;
+    font-weight: bold;
+}
+
+input.textbox-200{
+    width: 200px;
+    height: 21px;
+    float: left;
+    padding-left: 5px;
+    vertical-align: bottom
+}
+
+input.Products {
+    border: solid 1px #CCC;
+    height: 25px;
+    width: 12em;
+}
+
 .reveal-if-active {
   opacity: 0;
   max-height: 0;
